--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     similique saepe, natus eligendi aliquam, eos quod in sit necessitatibus sunt est ea cumque ut sapiente ipsam reprehenderit laboriosam alias dolorem, voluptates 
                     voluptatibus ad. Natus inventore vitae, molestiae similique ipsa cupiditate cumque voluptates, magnam fugit rerum mollitia?
                 </p>
-                <img class="some-img" src="img/some_img.jpg" alt="Якесь зображення" onmouseleave="show(3)" onmouseenter="hide(3)">
+                <img class="some-img" src="img/some_img.jpg" alt="Якесь зображення" ontouchmove="show(3)" onmouseleave="show(3)" onmouseenter="hide(3)">
                 <div class="block" id="block3">
                     <form id="form3" onsubmit="event.preventDefault();">
                       <label for="inputBlock3" id="label3">Введіть кількість клітинок:</label>
@@ -67,8 +67,8 @@
                     <div class="container">
                         <p>Корисні посилання для вивчення CSS та HTML:</p>
                         <div class="icon-wrapper">
-                            <a href="https://www.freecodecamp.org/" target="_blank" title="freecodecamp" ontouchstart="show(4)" onmouseleave="show(4)" onmouseenter="hide(4)"><i class="fa-brands fa-free-code-camp"></i></a>
-                        <a href="https://drive.google.com/drive/folders/1T5n8_T8mLExEp6aSJg4ylQrC0sJLxJGB" target="_blank" title="Google Drive" ontouchstart="show(4)" onmouseleave="show(4)" onmouseenter="hide(4)"><i class="fa-brands fa-google-drive"></i></a>
+                            <a href="https://www.freecodecamp.org/" target="_blank" title="freecodecamp" ontouchmove="show(4)" onmouseleave="show(4)" onmouseenter="hide(4)"><i class="fa-brands fa-free-code-camp"></i></a>
+                        <a href="https://drive.google.com/drive/folders/1T5n8_T8mLExEp6aSJg4ylQrC0sJLxJGB" target="_blank" title="Google Drive" ontouchmove="show(4)" onmouseleave="show(4)" onmouseenter="hide(4)"><i class="fa-brands fa-google-drive"></i></a>
                         </div>
                         <div class="block" id="block4">
                             <form id="form4" onsubmit="event.preventDefault();">
@@ -145,7 +145,7 @@
                     <em>CSS Grid</em> надає можливість створювати двовимірні сітки, де ви можете контролювати як розміщення елементів по горизонталі, 
                     так і по вертикалі.</p>
                 </div>
-                <img class="some-img" src="img/some_img.jpg" alt="Якесь зображення" ontouchstart="show(7)" onmouseleave="show(7)" onmouseenter="hide(7)">
+                <img class="some-img" src="img/some_img.jpg" alt="Якесь зображення" ontouchmove="show(7)" onmouseleave="show(7)" onmouseenter="hide(7)">
                 <div class="block" id="block7">
                     <form id="form7" onsubmit="event.preventDefault();">
                       <label for="inputBlock7" id="label7">Введіть кількість клітинок:</label>
